- исправлен статус HTTP-ответа в ValidationException - добавлен новый класс ConflictException - переход на генерацию ID через AtomicLong - исправлено сравнение объектов (использован equals) - добавлен метод фильтрации объектов по доступности - переработана логика обновления пользователя (update) - заменены вложенные сущности на их идентификаторы в полях моделей